fixed namespace (without cheat), cleaned up pom.xml's, added HomeController with a simple root RequestMapping, added maven shade plugin to package as uber jar